--- a/templates/kiosk.html
+++ b/templates/kiosk.html
@@ -162,7 +162,7 @@
                 <div class="job-meta">
                     <span>👤 {{ job.user }}</span>
                     <span>📄 {{ job.pages if job.pages > 0 else '?' }} pages</span>
-                    <span>💾 {{ (job.size / 1024)|round(1) }} MB</span>
+                    <span>💾 {{ job.size }} KB</span>
                     <span>🕐 {{ job.time }}</span>
                 </div>
                 {% if job.state in [3, 4] %}
